--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,37 @@ dependencies:
   flutter:
     sdk: flutter
 
+  bloc_test: ^9.1.7
+  connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
+  equatable: ^2.0.5
+  firebase_analytics: ^11.1.0
+  firebase_auth: ^5.1.1
+  firebase_core: ^3.1.1
+  firebase_crashlytics: ^4.0.2
+  firebase_messaging: ^15.0.2
+  firebase_storage: ^12.1.0
+  flutter_bloc: ^8.1.5
+  get_it: ^7.7.0
+  go_router: ^14.1.2
+  google_sign_in: ^6.2.1
+  injectable: ^2.4.2
+  internet_connection_checker: ^1.0.0+1
+  intl: ^0.19.0
+  mockito: ^5.4.4
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
 
+  build_runner: ^2.4.9
   flutter_lints: ^3.0.0
+  injectable_generator: ^2.6.1
+  melos: ^6.1.0
 
 flutter:
 
