--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,39 +41,20 @@ dev_dependencies:
   build_runner: ^2.4.9
   flutter_lints: ^3.0.0
   injectable_generator: ^2.6.1
+  intl_utils: ^2.8.7
   melos: ^6.1.0
 
 flutter:
-
+  generate: true
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
+  class_name: L
+  arb_dir: lib/core/localizations
+  output_dir: lib/core/localizations
+  output_localization_file: l10n.dart
+  output_class: AppLocalizations
+  synthetic_package: false
+  nullable_getter: false
+  main_locale: es
