--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
     sdk: flutter
 
   bloc_test: ^9.1.7
+  cloud_firestore: ^5.0.2
   connectivity_plus: ^6.0.3
   cupertino_icons: ^1.0.6
-  dartz: ^0.10.1
   equatable: ^2.0.5
   firebase_analytics: ^11.1.0
   firebase_auth: ^5.1.1
@@ -23,6 +23,7 @@ dependencies:
   firebase_messaging: ^15.0.2
   firebase_storage: ^12.1.0
   flutter_bloc: ^8.1.5
+  fpdart: ^1.1.0
   get_it: ^7.7.0
   go_router: ^14.1.2
   google_sign_in: ^6.2.1
@@ -31,6 +32,7 @@ dependencies:
   intl: ^0.19.0
   mockito: ^5.4.4
   mocktail: ^1.0.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +47,11 @@ dev_dependencies:
   melos: ^6.1.0
 
 flutter:
-  generate: true
   uses-material-design: true
+
+  #assets:
+  #  - assets/
+  #  - assets/images
 
 flutter_intl:
   enabled: true
