--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   mockito: ^5.4.4
   mocktail: ^1.0.3
   shared_preferences: ^2.2.3
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
   flutter_test:
